spacing corrections

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -34,7 +34,7 @@ body
       height: 100%
       z-index: 200
       hr
-        margin: 10px 50px
+        margin: 5px 50px
         background: image-url("hr_menu.png") no-repeat
         border: none
         height: 28px
@@ -42,6 +42,7 @@ body
       h1.logo
         margin-top: 0
         padding-top: 40px
+        margin-bottom: 0
         a
           margin-top: 0
           display: block
@@ -61,7 +62,7 @@ body
             font-weight: 300
             text-align: center
             margin-top: 30px
-            margin-bottom: 20px
+            margin-bottom: 0px
       dl.tabs.vertical
         text-align: center
         border: none
